--- a/projeto-todo-list/index.html
+++ b/projeto-todo-list/index.html
@@ -5,15 +5,23 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="style.css">
   <title>ToDoList</title>
+
 </head>
 <body>
   <div class="todo">
-    <h1 class="title">TO DO LIST</h1>
+    <div class="title">TO DO LIST</div>
 
-    <div class="todo_list"></div>
+    <div class="todo_list" id="todoList"></div>
+
+    <div class="todo_new_item">
+      <input type="text" placeholder="Digite sua tarefa" />
+    </div>
 
   </div>
+
   <footer class="footer">Register by Millene Galetti</footer>
+  <script src="todo-list.js"></script>
 </body>
 </html>
